tdf#81522 comphelper: just ignore disposed obj on save

Even if xObj.is(), it might be disposed, and then
getCurrentState() will raise an exception,
resulting in an ERRCODE_IO_GENERAL,
and failing to save the entire document.

Although it might not seem good to just ignore an error
on save, the general attitude in that function already
leans that way. In fact, the other ::StoreChildren()
wraps the entire for-loop in a try-catch.
Also, in this function a bad xPersist also breaks
out of the loop and returns a false.
So wrapping the entire xObj in an "ignore if errors"
try-catch seems reasonable to me in this instance.

The alternative is not to allow the user to save at all,
which is much worse, especially since there is nothing
he can do to fix the problem.

Change-Id: I0372245563735ae7ac7976bf7ce6060e57a5eb87
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/99129
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-by: Justin Luth <justin_luth@sil.org>
(cherry picked from commit 91d1cd8687c00a639cb4ecc5759254c946efe4c1)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/99199